--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ariakit/react": "^0.4.20",
     "@google/genai": "^1.34.0",
     "axios": "^1.13.2",
     "react": "^19.2.3",
